@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
  public static String VERSION="3.3.1-SNAPSHOT";
- public static String BUILD_TIME="20130426-0944";
+ public static String BUILD_TIME="20130426-1021";
 }
