@@ -11,10 +11,12 @@ import org.irods.jargon.core.exception.DataNotFoundException;
 import org.irods.jargon.core.pub.domain.SpecificQueryDefinition;
 import org.irods.jargon.core.query.SpecificQuery;
 import org.irods.jargon.core.query.SpecificQueryResultSet;
+import org.irods.jargon.core.utils.LocalFileUtils;
 import org.irods.jargon.core.utils.MiscIRODSUtils;
 import org.irods.jargon.testutils.TestingPropertiesHelper;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
+import org.junit.Ignore;
 import org.junit.Test;
 
 public class SpecificQueryAOTest {
@@ -469,6 +471,83 @@ public class SpecificQueryAOTest {
 		SpecificQueryAO queryAO = accessObjectFactory
 				.getSpecificQueryAO(irodsAccount);
 		queryAO.findSpecificQueryByAlias("ShowCollAclsButThisNameIsNotFoundItsNot");
+	}
+	
+	/**
+	 * Bug  [#1373] alias lookup failing on specific query
+	 * @throws Exception
+	 */
+	@Ignore
+	public void testFindSpecificQueryByAliasBug1373SmallQueryWithACr() throws Exception {
+		
+		String queryAlias = "testFindSpecificQueryByAliasBug1373SmallQuery";
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+
+
+		EnvironmentalInfoAO environmentalInfoAO = irodsFileSystem
+				.getIRODSAccessObjectFactory().getEnvironmentalInfoAO(
+						irodsAccount);
+		if (!environmentalInfoAO.isAbleToRunSpecificQuery()) {
+			return;
+		}
+		
+		// stringify the test query
+
+		String testQuery = "select * \n from atable";
+		
+		SpecificQueryDefinition specificQuery = new SpecificQueryDefinition(
+				testQuery, queryAlias);
+
+		SpecificQueryAO queryAO = irodsFileSystem.getIRODSAccessObjectFactory()
+				.getSpecificQueryAO(irodsAccount);
+		queryAO.addSpecificQuery(specificQuery);
+
+		SpecificQueryDefinition actual = queryAO
+				.findSpecificQueryByAlias(queryAlias);
+		Assert.assertEquals("did not find correct query",queryAlias,
+				actual.getAlias());
+
+	}
+
+	
+	/**
+	 * Bug  [#1373] alias lookup failing on specific query
+	 * @throws Exception
+	 */
+	@Ignore
+	public void testFindSpecificQueryByAliasBug1373() throws Exception {
+		
+		String queryAlias = "testFindSpecificQueryByAliasBug1373";
+
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+
+
+		EnvironmentalInfoAO environmentalInfoAO = irodsFileSystem
+				.getIRODSAccessObjectFactory().getEnvironmentalInfoAO(
+						irodsAccount);
+		if (!environmentalInfoAO.isAbleToRunSpecificQuery()) {
+			return;
+		}
+		
+		// stringify the test query
+
+		String testQuery = LocalFileUtils.getClasspathResourceFileAsString("/specific-query/define-query-bug-1373.txt");
+		
+		SpecificQueryDefinition specificQuery = new SpecificQueryDefinition(
+				testQuery, queryAlias);
+
+		SpecificQueryAO queryAO = irodsFileSystem.getIRODSAccessObjectFactory()
+				.getSpecificQueryAO(irodsAccount);
+		queryAO.addSpecificQuery(specificQuery);
+
+		SpecificQueryDefinition actual = queryAO
+				.findSpecificQueryByAlias(queryAlias);
+		Assert.assertEquals("did not find correct query",queryAlias,
+				actual.getAlias());
+
 	}
 
 }
