@@ -54,7 +54,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1372] continuation not propagated for specific query
 **Added continuation code to specific query
 
-
+*[#1373] alias lookup failing on specific query
+**work in progress...added currently @Ignore'd tests in SpecificQueryAOTest for this bug
  
 ==Features==
 
